testsuite/tests/python-api/equation_type/test.out
Emit with expected errors
-------------------------
File "test.py", line 32, in FooNode.eq_field
    Error: type is LogicEquation, which is forbidden in public API
File "test.py", line 35, in FooNode.eq
    Error: return type is LogicEquation, which is forbidden in public API
File "test.py", line 35, in FooNode.eq
    Error: "Eq" argument is LogicEquation, which is forbidden in public API
Build and run:
--------------
main.py: Running...
u.root.p_eq(None) = None
u.root.p_eq(42) = <TypeError: Equation instance expected, got <type 'int'> instead>
u.root.p_eq(u.root.f_eq_field): result has type <type 'NoneType'>
main.py: Done.
Done
